BENTO-31: * Update `CONTRIBUTING.md` to include information about using each of the test suites. * Update all tests to use AssertJ. * Add integration test for `DatabaseLayoutStorage` class.